--- a/.env.example
+++ b/.env.example
@@ -57,18 +57,21 @@ PREVIEW_MAX_HEIGHT=360
 # default: 1080p max with best audio
 CLIP_DOWNLOAD_FORMAT=bestvideo[height<=1080]+bestaudio/best
 
-# AI response caching (reduces costs on re-processing)
-# Enable caching of AI responses to avoid redundant API calls
-CACHE_ENABLED=true
+# S2 IMPROVEMENT: AI response caching (100% cost savings on re-runs)
+# Caches Gemini API responses keyed by content hash to avoid redundant API calls
+# Great for development/testing and re-processing videos with same content
+AI_CACHE_ENABLED=true
 
 # Cache time-to-live in days (how long to keep cached responses)
-CACHE_TTL_DAYS=30
+# Increase for stable prompts, decrease if prompts change frequently
+AI_CACHE_TTL_DAYS=30
 
-# Maximum cache size in GB
-CACHE_MAX_SIZE_GB=1.0
+# Maximum cache size in GB (older entries evicted when limit reached)
+# 1GB typically holds ~10,000 cached responses
+AI_CACHE_MAX_SIZE_GB=1.0
 
 # Cache directory (relative to project root)
-CACHE_DIR=.cache/ai_responses
+AI_CACHE_DIR=.cache/ai_responses
 
 # Parallel processing settings (Phase 2 Performance Optimization)
 # Maximum concurrent B-roll needs to process simultaneously
@@ -90,3 +93,51 @@ PARALLEL_AI_CALLS=5
 # Budget limit in USD (optional - set to 0 to disable)
 # Warning will be logged if processing costs exceed this limit
 BUDGET_LIMIT_USD=10.0
+
+# S5: Video pre-filtering before downloads
+# Filters videos based on metadata to avoid wasting bandwidth on poor quality videos
+# Minimum view count - videos with fewer views are skipped (often low quality)
+MIN_VIEW_COUNT=1000
+
+# Maximum duration for pre-filtering (in seconds)
+# Videos longer than this are skipped before download
+MAX_PREFILTER_DURATION=600
+
+# Prefer Creative Commons licensed content when available
+PREFER_CREATIVE_COMMONS=true
+
+# Blocked keywords in video titles (comma-separated)
+# Videos with these keywords in the title are skipped
+# Common low-quality patterns: compilations, reactions, rankings
+BLOCKED_TITLE_KEYWORDS=compilation,top 10,reaction,review,explained,tutorial
+
+# Q4: Context-aware video evaluation
+# Seconds of transcript context to extract around each B-roll timestamp
+# Higher values = more context but may dilute relevance
+# Lower values = more focused but may miss important context
+EVALUATION_CONTEXT_SECONDS=30.0
+
+# S3: faster-whisper configuration for transcription
+# Device for transcription: "auto", "cpu", or "cuda" (for GPU)
+WHISPER_DEVICE=auto
+# Compute type: "auto", "int8", "float16", or "float32"
+# int8 is fastest, float32 is most accurate
+WHISPER_COMPUTE_TYPE=auto
+
+# Q3: Multi-source video search (Pexels, Pixabay)
+# Adds professional CC0-licensed stock footage sources alongside YouTube
+# Free API keys available from respective websites
+
+# Pexels API key - get free at https://www.pexels.com/api/
+PEXELS_API_KEY=
+
+# Pixabay API key - get free at https://pixabay.com/api/docs/
+PIXABAY_API_KEY=
+
+# Comma-separated list of enabled sources (order determines priority)
+# Options: youtube, pexels, pixabay
+SEARCH_SOURCES=youtube,pexels,pixabay
+
+# Prioritize CC0-licensed stock footage over YouTube in search results
+# When true, Pexels/Pixabay results are ranked higher
+PREFER_STOCK_FOOTAGE=true
