--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,51 @@
 # required API key
 GEMINI_API_KEY=
 
+# ============================================================
+# YOUTUBE DATA API (Outlier Finder Enhancement)
+# ============================================================
+# Enables 50x faster metadata fetching and proper subscriber filtering
+# Get your API key at: https://console.cloud.google.com/
+# 1. Create a project
+# 2. Enable "YouTube Data API v3"
+# 3. Create an API key under "Credentials"
+# Free quota: 10,000 units/day (~29 topic searches with 100 channels each)
+YOUTUBE_API_KEY=
+USE_YOUTUBE_API=true
+
+# ============================================================
+# TURSO CLOUD DATABASE (Channel Index)
+# ============================================================
+# Cloud-based SQLite for storing channel index across sessions
+# Sign up at: https://turso.tech/
+# Run: turso db create stockpile-outliers
+# Run: turso db tokens create stockpile-outliers
+TURSO_DATABASE_URL=
+TURSO_AUTH_TOKEN=
+USE_CLOUD_CACHE=false
+
+# ============================================================
+# CLOUDFLARE R2 STORAGE (Exports)
+# ============================================================
+# Store exported CSVs/JSONs in cloud storage
+# Set up at: https://dash.cloudflare.com/ -> R2 Object Storage
+R2_ACCOUNT_ID=
+R2_ACCESS_KEY_ID=
+R2_SECRET_ACCESS_KEY=
+R2_BUCKET_NAME=stockpile-exports
+R2_PUBLIC_URL=
+
+# ============================================================
+# REDDIT INTEGRATION (Viral Video Discovery)
+# ============================================================
+# Enhances outlier finder with Reddit social signals
+# Optional: Uses public API if not set (lower rate limits)
+# For higher limits, create an app at: https://www.reddit.com/prefs/apps
+REDDIT_CLIENT_ID=
+REDDIT_CLIENT_SECRET=
+ENABLE_REDDIT_DISCOVERY=true
+REDDIT_SUBREDDITS=videos,mealtimevideos,Documentaries
+
 # input sources (local required)
 LOCAL_INPUT_FOLDER=input
 GOOGLE_DRIVE_INPUT_FOLDER_ID=
@@ -243,3 +288,22 @@ VIDEO_PREFERRED_SOURCE=youtube
 # Preferred source for images: google, pexels, or pixabay
 # Default: google (more variety via web search)
 IMAGE_PREFERRED_SOURCE=google
+
+# ============================================================
+# TTS (TEXT-TO-SPEECH) SETTINGS
+# ============================================================
+
+# Option 1: RunPod Serverless (Recommended - always available, pay-per-use)
+# Deploy the worker from stockpile/runpod-tts-worker/ to RunPod Serverless
+# Cost: ~$0.03-0.05 per 10 minutes of audio
+#
+# Get API key from: https://runpod.io/console/user/settings
+# Get endpoint ID after deploying: https://runpod.io/console/serverless
+RUNPOD_API_KEY=
+RUNPOD_ENDPOINT_ID=
+
+# Option 2: Colab Server (Free - requires browser tab open)
+# Run the Chatterbox-TTS-Server notebook and paste the URL here
+# Get the URL by running: https://github.com/devnen/Chatterbox-TTS-Server
+# The notebook provides a public URL via ngrok or cloudflared
+TTS_SERVER_URL=
