--- a/.env.example
+++ b/.env.example
@@ -307,3 +307,19 @@ RUNPOD_ENDPOINT_ID=
 # Get the URL by running: https://github.com/devnen/Chatterbox-TTS-Server
 # The notebook provides a public URL via ngrok or cloudflared
 TTS_SERVER_URL=
+
+# ============================================================
+# AI IMAGE GENERATION (fal.ai)
+# ============================================================
+# Generate and edit images using Flux 2 Klein and Z-Image Turbo
+# Sign up at: https://fal.ai
+# Get your API key at: https://fal.ai/dashboard/keys
+#
+# Supported models:
+#   - flux-klein: Flux 2 Klein by Black Forest Labs (~$0.009-0.014/MP)
+#   - z-image: Z-Image Turbo by Alibaba (~$0.005/MP)
+#
+# Pricing: Based on megapixels (MP) generated
+# Example: 1024x1024 image (~1MP) costs ~$0.005-0.014
+FAL_API_KEY=
+DEFAULT_IMAGE_GEN_MODEL=flux-klein
