--- a/runpod-tts-worker/requirements.txt
+++ b/runpod-tts-worker/requirements.txt
@@ -1,6 +1,9 @@
 # RunPod SDK
 runpod>=1.6.0
 
+# Brotli decompression (fixes "Can not decode content-encoding: br" error)
+Brotli
+
 # PyTorch (CUDA version for GPU support)
 torch>=2.1.0
 torchaudio>=2.1.0
